--- a/src/components/Hero/Hero/hero.module.css
+++ b/src/components/Hero/Hero/hero.module.css
@@ -1,16 +1,16 @@
 .hero{
-        margin: 80px 160px;
+        margin: 80px auto;
         display: flex;
         align-items: center;
         justify-content: space-between;
         gap: 60px;
-        width: 84%;
+        width: 82%;
 }
 @media (max-width:1440px){
     .hero{
         gap: 50px;
-        width: 88.8888%;
-        margin: 60px 0 0 28px;
+        width: 82%;
+        margin: 60px auto;
     }
 }
 @media(max-width:850px){
@@ -19,6 +19,6 @@
         width: 91.7949%;
         align-items: center;
         justify-content: flex-start;
-        margin: 50px 16px;
+        margin: 50px auto;
     }
 }
